--- a/app/src/main/res/layout/layout_share.xml
+++ b/app/src/main/res/layout/layout_share.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentBottom="true"
         android:horizontalSpacing="30px"
         android:numColumns="3"
+        android:listSelector="@android:color/transparent"
         android:verticalSpacing="30px"
         android:layout_marginBottom="0px"></GridView>
 </RelativeLayout>
