赛事比赛页 布局优化

--- a/app/src/main/res/layout/adapter_bsss.xml
+++ b/app/src/main/res/layout/adapter_bsss.xml
@@ -10,7 +10,6 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_marginTop="20px"
             android:id="@+id/adapter_bsss_img"
             android:layout_width="match_parent"
             android:layout_height="491px"
@@ -196,7 +195,10 @@
                 android:textSize="45px" />
 
         </RelativeLayout>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2px"
+            android:background="@color/line_color" />
 
     </LinearLayout>
 
