bug fix :定制视频接口和UI

--- a/app/src/main/res/layout/activity_buy_custom_vedio.xml
+++ b/app/src/main/res/layout/activity_buy_custom_vedio.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -10,259 +12,24 @@
         android:layout_alignParentTop="true">
         <include layout="@layout/layout_actionbar" />
     </FrameLayout>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="145px"
-        android:layout_marginBottom="141px"
-        android:scrollbars="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/bg_gray">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/aa_ting"/>
-            <LinearLayout
-                android:id="@+id/buy_a_ll"
-                android:layout_width="match_parent"
-                android:layout_height="210px"
-                android:background="@color/white"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="10dp"
-                    android:gravity="center_vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/font_main"
-                        android:textSize="@dimen/text_size"
-                        android:text="购买定制视频套餐A"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/font_gray"
-                        android:textSize="@dimen/text_size_notice"
-                        android:maxLines="2"
-                        android:ellipsize="end"
-                        android:text="购买定制视频说明"/>
-                </LinearLayout>
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.4">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/buy_a_iv"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginLeft="5dp"
-                        android:src="@mipmap/radio_checked"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="￥199"
-                        android:textSize="@dimen/text_size_notice"
-                        android:textColor="@color/red"
-                        android:layout_toLeftOf="@id/buy_a_iv"/>
-                </RelativeLayout>
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorGray"/>
-            <LinearLayout
-                android:id="@+id/buy_b_ll"
-                android:layout_width="match_parent"
-                android:layout_height="210px"
-                android:background="@color/white"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="10dp"
-                    android:gravity="center_vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/font_main"
-                        android:textSize="@dimen/text_size"
-                        android:text="购买定制视频套餐A"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/font_gray"
-                        android:textSize="@dimen/text_size_notice"
-                        android:maxLines="2"
-                        android:ellipsize="end"
-                        android:text="购买定制视频说明"/>
-                </LinearLayout>
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.4">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/buy_b_iv"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginLeft="5dp"
-                        android:src="@mipmap/radio_uncheck"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="￥199"
-                        android:textSize="@dimen/text_size_notice"
-                        android:textColor="@color/red"
-                        android:layout_toLeftOf="@id/buy_b_iv"/>
-                </RelativeLayout>
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorGray"/>
-            <LinearLayout
-                android:id="@+id/buy_c_ll"
-                android:layout_width="match_parent"
-                android:layout_height="210px"
-                android:background="@color/white"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="10dp"
-                    android:gravity="center_vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/font_main"
-                        android:textSize="@dimen/text_size"
-                        android:text="购买定制视频套餐A"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/font_gray"
-                        android:textSize="@dimen/text_size_notice"
-                        android:maxLines="2"
-                        android:ellipsize="end"
-                        android:text="购买定制视频说明"/>
-                </LinearLayout>
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.4">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/buy_c_iv"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginLeft="5dp"
-                        android:src="@mipmap/radio_uncheck"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="￥199"
-                        android:textSize="@dimen/text_size_notice"
-                        android:textColor="@color/red"
-                        android:layout_toLeftOf="@id/buy_c_iv"/>
-                </RelativeLayout>
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorGray"/>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/colorGray"/>
-            <LinearLayout
-                android:id="@+id/buy_no_ll"
-                android:layout_width="match_parent"
-                android:layout_height="210px"
-                android:background="@color/white"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="10dp"
-                    android:gravity="center_vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/font_main"
-                        android:textSize="@dimen/text_size"
-                        android:text="购买定制视频套餐A"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/font_gray"
-                        android:textSize="@dimen/text_size_notice"
-                        android:maxLines="2"
-                        android:ellipsize="end"
-                        android:text="购买定制视频说明"/>
-                </LinearLayout>
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.4">
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/buy_no_iv"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginLeft="5dp"
-                        android:src="@mipmap/radio_uncheck"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="￥199"
-                        android:textSize="@dimen/text_size_notice"
-                        android:textColor="@color/red"
-                        android:layout_toLeftOf="@id/buy_no_iv"/>
-                </RelativeLayout>
-            </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorGray"/>
-        </LinearLayout>
 
-    </ScrollView>
-    <Button
-        android:id="@+id/buy_pay"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="141px"
-        android:layout_alignParentBottom="true"
-        android:background="@mipmap/pay_button"
-        android:text="去支付"
-        android:textColor="#ffffff"
-        android:gravity="center"
-        android:textSize="@dimen/text_size"
-        />
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/aa_ting"/>
+
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
+</LinearLayout>
