--- a/app/src/main/res/layout/comm_bsss.xml
+++ b/app/src/main/res/layout/comm_bsss.xml
@@ -35,7 +35,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="30px"
+        android:paddingTop="10px">
 
         <TextView
             android:id="@+id/adapter_bsss_title"
