--- a/app/src/main/res/layout/qingxun_qingxunkecheng.xml
+++ b/app/src/main/res/layout/qingxun_qingxunkecheng.xml
@@ -56,7 +56,7 @@
     </LinearLayout>
     <View android:layout_width="match_parent" android:layout_height="0.8dip" android:background="@color/text_hint"/>
     <RelativeLayout android:layout_width="match_parent" android:layout_height="40dip">
-        <top.smartsport.www.widget.utils.RoundImageView android:id="@+id/coach_head" android:layout_marginLeft="10dip" android:layout_height="25dip" android:layout_width="25dip" android:layout_centerVertical="true" android:src="@mipmap/head_default"
+        <RoundImageView android:id="@+id/coach_head" android:layout_marginLeft="10dip" android:layout_height="25dip" android:layout_width="25dip" android:layout_centerVertical="true" android:src="@mipmap/head_default"
         />
         <TextView android:layout_width="wrap_content" android:layout_marginLeft="10dip" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toRightOf="@+id/coach_head" android:id="@+id/coach_name"/>
         <TextView android:layout_width="wrap_content" android:layout_marginRight="10dip" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentRight="true" android:id="@+id/woyaobaoming"
