--- a/app/src/main/res/layout/package_item.xml
+++ b/app/src/main/res/layout/package_item.xml
@@ -48,6 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:focusable="false"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:background="#00000000"
