--- a/app/src/main/res/layout/activity_mysp.xml
+++ b/app/src/main/res/layout/activity_mysp.xml
@@ -3,57 +3,75 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <FrameLayout
+        android:id="@+id/action_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/action_bar"
         android:layout_alignParentTop="true">
-        <include layout="@layout/layout_actionbar" /></FrameLayout>
-    <RelativeLayout
-        android:id="@+id/mykcempty"
+
+        <include layout="@layout/layout_actionbar" />
+    </FrameLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView android:visibility="invisible"
-            android:id="@+id/gojoinlesson"
-            android:layout_width="700px"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="30dip"
-            android:background="@mipmap/btn_long"
-            android:gravity="center"
-            android:text="加入会员观看所有在线教案"
-            android:textColor="@android:color/white"
-            android:textSize="18dip" />
-
-        <RelativeLayout android:layout_above="@+id/gojoinlesson"
+        <com.handmark.pulltorefresh.library.PullToRefreshListView
+            android:id="@+id/pullrefreshlistview"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+
+        </com.handmark.pulltorefresh.library.PullToRefreshListView>
+
+        <RelativeLayout
+            android:id="@+id/mykcempty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/gojoinlesson"
+                android:layout_width="700px"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                >
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="30dip"
+                android:background="@mipmap/btn_long"
+                android:gravity="center"
+                android:text="加入会员观看所有在线教案"
+                android:textColor="@android:color/white"
+                android:textSize="18dip"
+                android:visibility="invisible" />
 
-                <ImageView
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/gojoinlesson">
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="30px"
-                    android:src="@mipmap/wdkcempty" />
+                    android:layout_centerInParent="true"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="还没有任何定制视频"
-                    android:textColor="@color/text_gray"
-                    android:textSize="17dip" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="30px"
+                        android:src="@mipmap/wdkcempty" />
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="还没有任何定制视频"
+                        android:textColor="@color/text_gray"
+                        android:textSize="17dip" />
+
+                </LinearLayout>
+            </RelativeLayout>
+
         </RelativeLayout>
-
-    </RelativeLayout>
+    </FrameLayout>
 </LinearLayout>
