--- a/app/src/main/res/layout/adapter_bszb.xml
+++ b/app/src/main/res/layout/adapter_bszb.xml
@@ -98,7 +98,7 @@
                 android:layout_marginRight="100px"
                 android:singleLine="true" />
 
-            <ImageView
+            <ImageView android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/icon_share"
