--- a/app/src/main/res/layout/coach_list.xml
+++ b/app/src/main/res/layout/coach_list.xml
@@ -43,7 +43,7 @@
             />
     </LinearLayout>
 
-    <ImageView
+    <ImageView android:visibility="gone"
         android:id="@+id/iv_collect"
         android:layout_width="72px"
         android:layout_height="75px"
