--- a/app/src/main/res/layout/adapter_myvideo.xml
+++ b/app/src/main/res/layout/adapter_myvideo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -82,7 +82,7 @@
                     android:layout_height="30dip">
 
                     <TextView
-                        android:id="@+id/u16"
+                        android:id="@+id/level"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -107,4 +107,98 @@
         </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/white">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/adapter_bszb_img"
+                android:layout_width="match_parent"
+                android:layout_height="491px"
+                android:src="@mipmap/aa_ting"
+                android:scaleType="fitXY" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20px"
+                android:layout_marginLeft="20px"
+                />
+            <TextView
+                android:id="@+id/adapter_bszb_state"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="来源：花椒"
+                android:paddingTop="10px"
+                android:paddingBottom="10px"
+                android:textSize="36px"
+                android:paddingRight="30px"
+                android:paddingLeft="30px"
+                android:layout_gravity="right"
+                android:layout_marginTop="20px"
+                android:layout_marginRight="40px"
+                android:textColor="@color/white"/>
+
+            <ImageView
+                android:background="#3f000000"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:foregroundGravity="center"
+                android:scaleType="centerInside"
+                android:src="@mipmap/bq_start"/>
+        </FrameLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <TextView
+                android:layout_alignParentLeft="true"
+                android:id="@+id/adapter_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/red"
+                android:textSize="38px"
+                android:layout_marginLeft="40px"
+                android:layout_marginTop="20px"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text=""/>
+
+            <TextView
+                android:layout_alignParentRight="true"
+                android:id="@+id/pay_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:textSize="38px"
+                android:layout_marginLeft="40px"
+                android:layout_marginTop="20px"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text=""/>
+            <TextView
+                android:layout_toLeftOf="@+id/pay_status"
+                android:layout_toRightOf="@+id/adapter_price"
+                android:gravity="right"
+                android:id="@+id/video_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="38px"
+                android:layout_marginLeft="40px"
+                android:layout_marginTop="20px"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text=""/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 </LinearLayout>
+
