--- a/app/src/main/res/layout/activity_ssbm.xml
+++ b/app/src/main/res/layout/activity_ssbm.xml
@@ -23,7 +23,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
 
@@ -372,7 +372,7 @@
                         android:background="@color/line_color" />
 
 
-                    <RelativeLayout
+                    <RelativeLayout android:id="@+id/inputphone"
                         android:layout_width="match_parent"
                         android:layout_height="120px">
 
