--- a/app/src/main/res/layout/adapter_myvideo.xml
+++ b/app/src/main/res/layout/adapter_myvideo.xml
@@ -134,7 +134,7 @@
                 android:id="@+id/adapter_bszb_state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="来源：花椒"
+                android:text=""
                 android:paddingTop="10px"
                 android:paddingBottom="10px"
                 android:textSize="36px"
@@ -143,7 +143,8 @@
                 android:layout_gravity="right"
                 android:layout_marginTop="20px"
                 android:layout_marginRight="40px"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:visibility="gone"/>
 
             <ImageView
                 android:background="#3f000000"
@@ -169,7 +170,7 @@
                 android:layout_marginTop="20px"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text=""/>
+                android:text="\?"/>
 
             <TextView
                 android:layout_alignParentRight="true"
@@ -182,7 +183,7 @@
                 android:layout_marginTop="20px"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text=""/>
+                android:text="   "/>
             <TextView
                 android:layout_toLeftOf="@+id/pay_status"
                 android:layout_toRightOf="@+id/adapter_price"
@@ -195,7 +196,7 @@
                 android:layout_marginTop="20px"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text=""/>
+                android:text="   "/>
 
         </RelativeLayout>
 
