--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -2,14 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-            android:background="#f8f8f8"
+            android:background="#f0efef"
     >
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/id_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="#f8f8f8"
+        android:divider="#f0efef"
         android:dividerHeight="25px"
         >
     </com.handmark.pulltorefresh.library.PullToRefreshListView>
