--- a/app/src/main/res/layout/fragment_wd.xml
+++ b/app/src/main/res/layout/fragment_wd.xml
@@ -141,9 +141,9 @@
                 android:textSize="42px" />
 
             <View
-                android:layout_width="1px"
+                android:layout_width="2px"
                 android:layout_height="42px"
-                android:background="#ffffff" />
+                android:background="#003300" />
 
             <TextView
                 android:id="@+id/weight"
@@ -156,9 +156,9 @@
                 android:textSize="42px" />
 
             <View
-                android:layout_width="1px"
+                android:layout_width="2px"
                 android:layout_height="42px"
-                android:background="#ffffff" />
+                android:background="#003300" />
 
             <TextView
                 android:id="@+id/leg"
