--- a/app/src/main/res/layout/fragment_zxqx.xml
+++ b/app/src/main/res/layout/fragment_zxqx.xml
@@ -92,11 +92,13 @@
                 android:id="@+id/fm_list_qxzx"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:scrollbars="none"/>
 
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_marginTop="35px"
                 android:layout_marginBottom="35px">
                 <include layout="@layout/horizontal_line" />
