--- a/app/src/main/res/layout/adapter_bszb.xml
+++ b/app/src/main/res/layout/adapter_bszb.xml
@@ -37,11 +37,13 @@
             android:layout_marginRight="40px"
             android:textColor="@color/white"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@mipmap/bq_start"/>
+        <ImageView
+            android:background="#3f000000"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:foregroundGravity="center"
+            android:scaleType="centerInside"
+            android:src="@mipmap/bq_start"/>
     </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
